# telegram-bot

miniapp/: package.json  pnpm-lock.yaml
miniapp/src/app/: page.tsx
miniapp/src/app/create-poll/: page.tsx
telegrambot/: pyproject.toml
telegrambot/telegrambot/: echobot.py
