[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["Tan Gian Sen  <64723554+GSgiansen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^22.3"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
